// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typegen result type generation __typename field should gen __typename type from interface type 1`] = `
"export type MyQuery = {
    node: {
        __typename: string;
    };
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation __typename field should gen __typename type from object type 1`] = `
"export type MyQuery = {
    __typename: \\"Query\\";
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation __typename field should gen __typename type from union type 1`] = `
"export type MyQuery = {
    item: {
        __typename: \\"User\\" | \\"Page\\";
    };
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation definition node pattern should gen type from fragment def 1`] = `
"export type MyFragment = {
    hello: string | null;
};
"
`;

exports[`typegen result type generation definition node pattern should gen type from mutation operation def 1`] = `
"export type MyMutaion = {
    like: string;
};
export type MyMutaionVariables = {};
"
`;

exports[`typegen result type generation definition node pattern should gen type from query operation def 1`] = `
"export type QueryResult = {
    hello: string;
};
export type QueryVariables = {};
"
`;

exports[`typegen result type generation definition node pattern should gen type from subscription operation def 1`] = `
"export type MySubscription = {
    issue: string;
};
export type MySubscriptionVariables = {};
"
`;

exports[`typegen result type generation fragment spread reference should gen type from inline fragment with type condition 1`] = `
"export type MyQuery = {
    id: string;
} & ({
    hello: string;
});
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation fragment spread reference should gen type from inline fragment without type condition 1`] = `
"export type MyQuery = {
    id: string;
    hello: string;
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation fragment spread reference should gen type reference from fragment spread on field selection 1`] = `
"export type MyFragment = {
    name: string;
    age: number;
};
export type MyQuery = {
    users: ({
        id: string;
    } & MyFragment)[];
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation fragment spread reference should gen type reference from fragment spread on fragment def 1`] = `
"export type A = {
    name: string;
};
export type B = {
    age: number;
} & A;
"
`;

exports[`typegen result type generation fragment spread reference should gen type reference from fragment spread on operation 1`] = `
"export type MyFragment = {
    hello: string;
};
export type MyQuery = {
    bye: string;
} & MyFragment;
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation fragment spread reference should gen union object literal type from inline fragment concrete type condition 1`] = `
"export type MyQuery = {
    item: ({
        id: string;
    }) & (({
        name: string;
    }) | ({
        body: string;
    }));
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation fragment spread reference should gen union of type references from fragment concrete type condition 1`] = `
"export type NodeFragment = {
    id: string;
};
export type UserFragment = {
    name: string;
};
export type PageFragment = {
    body: string;
};
export type MyQuery = {
    item: NodeFragment & (UserFragment | PageFragment);
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation output types pattern should gen type from built-in scalar types 1`] = `
"export type MyQuery = {
    idField: string;
    stringField: string;
    intField: number;
    floatField: number;
    boolField: boolean;
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation output types pattern should gen type from enum 1`] = `
"export type MyQuery = {
    color: (\\"RED\\" | \\"BLUE\\" | \\"GREEN\\") | null;
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation output types pattern should gen type from interface type 1`] = `
"export type MyQuery = {
    node: {
        id: string;
    };
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation output types pattern should gen type from object type 1`] = `
"export type MyQuery = {
    hello: string;
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation output types pattern should gen type with correct list/nonNull modifiers 1`] = `
"export type MyQuery = {
    nullableField: string | null;
    strictField: string;
    nullableFieldNullableList: (string | null)[] | null;
    nullableFieldStrictList: (string | null)[];
    strictFieldNullableList: string[] | null;
    strictFieldStrictList: string[];
    nullableNestedList: ((string | null)[] | null)[] | null;
    strictNestedList: string[][];
};
export type MyQueryVariables = {};
"
`;

exports[`typegen result type generation output types pattern should gen type with field alias 1`] = `
"export type MyQuery = {
    greeting: string;
};
export type MyQueryVariables = {};
"
`;

exports[`typegen variable type generation should gen optional type with default value variable 1`] = `
"export type MyQuery = {
    hello: string;
};
export type MyQueryVariables = {
    count?: number | null;
};
"
`;

exports[`typegen variable type generation should gen type from enum 1`] = `
"export type MyQuery = {
    enumInput: string;
};
export type MyQueryVariables = {
    color: \\"RED\\" | \\"BLUE\\" | \\"GREEN\\";
};
"
`;

exports[`typegen variable type generation should gen type from input object type 1`] = `
"type VectorInputType = {
    x: number;
    y: number;
};
type LineInputType = {
    start: VectorInputType;
    end: VectorInputType;
};
export type MyQuery = {
    lineInput: number;
};
export type MyQueryVariables = {
    line: LineInputType;
};
"
`;

exports[`typegen variable type generation should gen type from scalar types 1`] = `
"export type MyQuery = {
    idInput: string;
    strInput: string;
    intInput: string;
    floatInput: string;
    boolInput: string;
    customScalarInput: string;
};
export type MyQueryVariables = {
    idVar: string;
    strVar: string;
    intVar: number;
    floatVar: number;
    boolVar: boolean;
    scalarVar: any;
};
"
`;

exports[`typegen variable type generation should gen type with correct list/nonNull modifiers 1`] = `
"export type MyQuery = {
    nullableField: string;
    strictField: string;
    nullableFieldNullableList: string;
    nullableFieldStrictList: string;
    strictFieldNullableList: string;
    strictFieldStrictList: string;
    nullableNestedList: string;
    strictNestedList: string;
};
export type MyQueryVariables = {
    var1?: string | null;
    var2: string;
    var3?: (string | null)[] | null;
    var4: (string | null)[];
    var5?: string[] | null;
    var6: string[];
    var7?: ((string | null)[] | null)[] | null;
    var8: string[][];
};
"
`;

exports[`typegen variable type generation should work even if the input types have circular references 1`] = `
"type UserInputType = {
    posts: PostInputType[];
};
type PostInputType = {
    author: UserInputType;
};
export type AddPost = {
    addPost: boolean | null;
};
export type AddPostVariables = {
    post: PostInputType;
};
"
`;
